update example html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header class="small-title">1st HTML Block</header>
 			<!-- element containing our 1st set of html for comparison -->
 			<div class="block" id="block1">
-				<div>Name: justin Parker<br>Link: http://github.com/jparkerweb/htmldiff-example<br>About: html diff poc<br>Description: front-end lib to show differences between html blocks<br>Category: javascript</div>
+				<div>Name: justin Parker<br>Link: http://github.com/jparkerweb/htmldiff-example<br>About: html diff poc<br>Description: front-end lib to show what has changed between html blocks<br>Category: javascript</div>
 			</div>
 		</div>
 
