--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>htmldiff example</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container--compare-blocks">
-		<div class="compare-block compare-block-one">
-			<header class="small-title">1st HTML Block</header>
-			<!-- element containing our 1st set of html for comparison -->
-			<div class="block" id="block1">
-				<div>Name: justin Parker<br>Link: http://github.com/jparkerweb/htmldiff-example<br>About: html diff poc<br>Description: front-end lib to show what has changed between html blocks<br>Category: javascript</div>
-			</div>
-		</div>
-
 		<div class="compare-block compare-block-two">
 			<header class="small-title">2nd HTML Block</header>
 			<!-- element containing our 2nd set of html for comparison -->
 			<div class="block" id="block2">
 				<div>Name: Justin Parker<br>Link: http://github.com/jparkerweb/htmldiff-example<br>About: HTML diff example<br>Description: front-end lib to show differences between HTML blocks<br>Category: JavaScript</div>
+			</div>
+		</div>
+
+		<div class="compare-block compare-block-one">
+			<header class="small-title">1st HTML Block</header>
+			<!-- element containing our 1st set of html for comparison -->
+			<div class="block" id="block1">
+				<div>Name: justin Parker<br>Link: http://github.com/jparkerweb/htmldiff-example<br>About: html diff poc<br>Description: front-end lib to show what has changed between html blocks<br>Category: javascript</div>
 			</div>
 		</div>
 	</div>
